--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/google-maps": "^3.2.0",
+    "@types/lodash": "^4.14.71",
     "@webcomponents/custom-elements": "^1.0.0-alpha.3",
     "angular2-jwt": "^0.2.3",
     "clarity-angular": "^0.10.0-alpha.6",
     "clarity-icons": "^0.10.0-alpha.6",
     "clarity-ui": "^0.10.0-alpha.6",
     "core-js": "^2.4.1",
+    "lodash": "^4.17.4",
     "mutationobserver-shim": "^0.3.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
