--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "es6-promisify": "^5.0.0",
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
+    "jimp": "^0.2.28",
     "md5": "^2.2.1",
     "mongoose": "^4.11.3",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "uuid": "^3.1.0",
     "validator": "^8.0.0"
   },
   "homepage": "https://github.com/AdamSheaffer/GO#readme"
