--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --inspect start.js && cd client/ && ng serve",
+    "dev": "nodemon --inspect start.js",
     "loadparks": "node ./data/parkData.js",
     "blowitallaway": "node ./data/parkData.js --delete"
   },
