--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.3",
     "express-validator": "^3.2.1",
     "jimp": "^0.2.28",
+    "lodash": "^4.17.4",
     "md5": "^2.2.1",
     "mongoose": "^4.11.3",
     "multer": "^1.3.0",
