--- a/client/package.json
+++ b/client/package.json
@@ -12,35 +12,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.3",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^4.3.6",
+    "@angular/common": "^4.3.6",
+    "@angular/compiler": "^4.3.6",
+    "@angular/core": "^4.3.6",
+    "@angular/forms": "^4.3.6",
+    "@angular/http": "^4.3.6",
+    "@angular/platform-browser": "^4.3.6",
+    "@angular/platform-browser-dynamic": "^4.3.6",
+    "@angular/router": "^4.3.6",
     "@types/google-maps": "^3.2.0",
-    "@types/lodash": "^4.14.71",
-    "@webcomponents/custom-elements": "^1.0.0-alpha.3",
+    "@types/lodash": "^4.14.74",
+    "@webcomponents/custom-elements": "^1.0.0",
     "angular2-jwt": "^0.2.3",
-    "clarity-angular": "^0.10.0-alpha.6",
-    "clarity-icons": "^0.10.0-alpha.6",
-    "clarity-ui": "^0.10.0-alpha.6",
-    "core-js": "^2.4.1",
+    "clarity-angular": "^0.10.2",
+    "clarity-icons": "^0.10.2",
+    "clarity-ui": "^0.10.2",
+    "core-js": "^2.5.0",
     "lodash": "^4.17.4",
     "mutationobserver-shim": "^0.3.2",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.17"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
-    "@types/jasmine": "~2.5.53",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/language-service": "^4.3.6",
+    "@types/jasmine": "^2.5.54",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.88",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
