--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jimp": "^0.2.28",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
+    "moment": "^2.18.1",
     "mongoose": "^4.11.3",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
