--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "start.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon --inspect start.js\" \"cd client/ && ng serve\"",
+    "dev": "concurrently \"nodemon --inspect start.js\" \"cd client/ && ng serve --proxy-config proxy.config.json\"",
     "loadparks": "node ./data/parkData.js",
     "blowitallaway": "node ./data/parkData.js --delete"
   },
@@ -22,7 +22,6 @@
     "axios": "^0.16.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
-    "cors": "^2.8.4",
     "crypto": "0.0.3",
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
