--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "concurrently \"nodemon --inspect start.js\" \"cd client/ && ng serve --proxy-config proxy.config.json\"",
     "loadparks": "node ./data/parkData.js",
     "blowitallaway": "node ./data/parkData.js --delete",
-    "postinstall": "npm run build"
+    "postinstall": "cd client && ng build --prod"
   },
   "repository": {
     "type": "git",
