--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "concurrently \"nodemon --inspect start.js\" \"cd client/ && ng serve --proxy-config proxy.config.json\"",
     "loadparks": "node ./data/parkData.js",
-    "blowitallaway": "node ./data/parkData.js --delete",
-    "postinstall": "cd client && ng build --prod"
+    "blowitallaway": "node ./data/parkData.js --delete"
   },
   "repository": {
     "type": "git",
