changing postinstall script

--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,10 @@
     "@types/google-maps": "^3.2.0",
     "@types/lodash": "^4.14.74",
     "@webcomponents/custom-elements": "^1.0.0",
+    "@angular/language-service": "^4.3.6",
+    "@types/jasmine": "^2.5.54",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "^6.0.88",
     "angular2-jwt": "^0.2.3",
     "clarity-angular": "^0.10.2",
     "clarity-icons": "^0.10.2",
