--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -6,5 +6,9 @@
     "/auth": {
         "target": "http://localhost:8080",
         "secure": false
+    },
+    "/uploads": {
+        "target": "http://localhost:8080",
+        "secure": false
     }
 }
