--- a/client/package.json
+++ b/client/package.json
@@ -12,35 +12,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/cli": "1.2.1",
-    "@angular/common": "^4.3.6",
-    "@angular/compiler": "^4.3.6",
-    "@angular/compiler-cli": "^4.3.6",
-    "@angular/core": "^4.3.6",
-    "@angular/forms": "^4.3.6",
-    "@angular/http": "^4.3.6",
-    "@angular/platform-browser": "^4.3.6",
-    "@angular/platform-browser-dynamic": "^4.3.6",
-    "@angular/router": "^4.3.6",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@clr/angular": "^0.11.9",
+    "@clr/icons": "^0.11.9",
+    "@clr/ui": "^0.11.9",
     "@types/google-maps": "^3.2.0",
     "@types/lodash": "^4.14.74",
     "@webcomponents/custom-elements": "^1.0.0",
     "angular2-jwt": "^0.2.3",
-    "clarity-angular": "^0.10.2",
     "clarity-icons": "^0.10.2",
     "clarity-ui": "^0.10.2",
-    "core-js": "^2.5.0",
+    "core-js": "^2.4.1",
     "lodash": "^4.17.4",
     "mutationobserver-shim": "^0.3.2",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.17"
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/language-service": "^4.3.6",
-    "@types/jasmine": "^2.5.54",
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
+    "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.88",
+    "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.6.2",
@@ -52,8 +54,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
+    "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.4.2"
   }
 }
