--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "start.js",
   "engines": {
-    "node": ">= 7.10.0"
+    "node": "7.10.x"
   },
   "scripts": {
     "start": "node ./start.js",
