--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "start.js",
   "engines": {
-    "node": "9.9.x"
+    "node": "9.9.x",
+    "npm": "5.6.x"
   },
   "scripts": {
     "start": "node ./start.js",
