--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "concurrently \"nodemon --inspect start.js\" \"cd client/ && ng serve --proxy-config proxy.config.json\"",
     "loadparks": "node ./data/parkData.js",
     "blowitallaway": "node ./data/parkData.js --delete",
+    "preinstall": "cd client && npm install @angular/cli @angular/compiler-cli typescript",
     "postinstall": "cd client && npm install && ./node_modules/.bin/ng build --prod"
   },
   "repository": {
