--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^1.7.3",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@angular/animations": "^5.2.9",
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
@@ -33,13 +36,11 @@
     "core-js": "^2.5.3",
     "lodash": "^4.17.5",
     "mutationobserver-shim": "^0.3.2",
+    "typescript": "~2.4.2",
     "rxjs": "^5.5.7",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -55,7 +56,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.4.2"
+    "tslint": "~5.3.2"
   }
 }
