add a workflow for password resets

--- a/client/proxy.config.json
+++ b/client/proxy.config.json
@@ -3,7 +3,7 @@
         "target": "http://localhost:8080",
         "secure": false
     },
-    "/auth": {
+    "/account": {
         "target": "http://localhost:8080",
         "secure": false
     },
