--- a/package.json
+++ b/package.json
@@ -35,15 +35,19 @@
     "es6-promisify": "^5.0.0",
     "express": "^4.16.3",
     "express-validator": "^3.2.1",
+    "html-to-text": "^4.0.0",
     "jimp": "^0.2.28",
+    "juice": "^4.2.3",
     "lodash": "^4.17.5",
     "md5": "^2.2.1",
     "moment": "^2.21.0",
     "mongoose": "^4.13.12",
     "multer": "^1.3.0",
+    "nodemailer": "^4.6.4",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "pug": "^2.0.3",
     "uuid": "^3.2.1",
     "validator": "^8.2.0"
   },
