--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^1.7.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
     "@angular/animations": "^5.2.9",
+    "@angular/cli": "^1.7.3",
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
+    "@angular/compiler-cli": "^5.0.0",
     "@angular/core": "^5.2.9",
     "@angular/forms": "^5.2.9",
     "@angular/http": "^5.2.9",
+    "@angular/language-service": "^5.0.0",
     "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",
@@ -28,16 +28,18 @@
     "@clr/icons": "^0.11.9",
     "@clr/ui": "^0.11.9",
     "@types/google-maps": "^3.2.0",
+    "@types/leaflet": "^1.2.9",
     "@types/lodash": "^4.14.105",
     "@webcomponents/custom-elements": "^1.0.8",
     "angular2-jwt": "^0.2.3",
     "clarity-icons": "^0.10.27",
     "clarity-ui": "^0.10.27",
     "core-js": "^2.5.3",
+    "leaflet": "^1.3.3",
     "lodash": "^4.17.5",
     "mutationobserver-shim": "^0.3.2",
-    "typescript": "~2.4.2",
     "rxjs": "^5.5.7",
+    "typescript": "~2.4.2",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
